WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16611
vertical-align
CSS1 vertical-align doesn't work
https://bugs.webkit.org/show_bug.cgi?id=16611
Summary
CSS1 vertical-align doesn't work
Patrick
Reported
2007-12-26 08:15:34 PST
see the link I provided, it works on IE, Opera, FF and KHTML but on safari it just displays a line instead of a stairway. The code is: <style>b{vertical-align:-40px}</style><b>___<b>___<b>___<b>___
Attachments
Simply embarrassing.
(27.44 KB, patch)
2008-01-16 22:00 PST
,
Dave Hyatt
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2007-12-26 08:59:36 PST
P1 is for regressions.
Gavin Sherlock
Comment 2
2007-12-26 09:25:09 PST
Also doesn't work on Mac,
r28744
David Kilzer (:ddkilzer)
Comment 3
2007-12-26 21:24:29 PST
Confirmed with a local debug build of WebKit
r28968
with Safari 3.0.4 (523.12.2) on Mac OS X 10.4.11 (8S165).
Mark Rowe (bdash)
Comment 4
2008-01-16 19:44:51 PST
***
Bug 16900
has been marked as a duplicate of this bug. ***
Dave Hyatt
Comment 5
2008-01-16 22:00:15 PST
Created
attachment 18489
[details]
Simply embarrassing.
Oliver Hunt
Comment 6
2008-01-16 22:05:55 PST
Comment on
attachment 18489
[details]
Simply embarrassing. r=me, provided the unrelated layout test changes are removed
Dave Hyatt
Comment 7
2008-01-16 22:20:59 PST
Fixed in
r29553
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug