WebCore:

Fix for http://bugs.webkit.org/show_bug.cgi?id=16611

        Make sure vertical-align length values are offset from their parents rather than being absolute to the
        line.

        Reviewed by olliej

        Added fast/css/vertical-align-lengths.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::getVerticalPosition):

LayoutTests:

       Fix for http://bugs.webkit.org/show_bug.cgi?id=16611

       Reviewed by olliej

        * ChangeLog:
        * fast/css/vertical-align-lengths.html: Added.
        * platform/mac/fast/css/vertical-align-lengths-expected.checksum: Added.
        * platform/mac/fast/css/vertical-align-lengths-expected.png: Added.
        * platform/mac/fast/css/vertical-align-lengths-expected.txt: Added.



Canonical link: https://commits.webkit.org/23385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29553 268f45cc-cd09-0410-ab3c-d52691b4dbfc